--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -8,17 +8,21 @@
 	rel="stylesheet"
 	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 	crossorigin="anonymous">
-<link rel="stylesheet" th:href="@{~/css/styles.css}">
-<!-- <link rel="shortcut icon" type="image/png" th:href="@{~/assets/img/favicon/images.png}">
+
+	<!--
+	<link rel="stylesheet" th:href="@{~/css/styles.css}"> 
+	<link rel="shortcut icon" type="image/png" th:href="@{~/assets/img/favicon/images.png}">
     -->
 </head>
 
 
 <nav th:fragment="nav"
 	class="navbar navbar-expand-lg navbar-dark bg-dark">
-	
+
 	<div class="container-fluid">
-		<a class="navbar-brand" href="/" style="color:red; font-size:30px; font-family:serif; font-weight: bolder;">Agulhas Negras</a>
+		<a class="navbar-brand" href="/index"
+			style="color: red; font-size: 30px; font-family: serif; font-weight: bolder;">Agulhas
+			Negras</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 			data-bs-target="#navbarNav" aria-controls="navbarNav"
 			aria-expanded="false" aria-label="Toggle navigation">
@@ -26,12 +30,12 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link active"
-					aria-current="page" href="/">Início</a></li>
-				<li class="nav-item"><a class="nav-link" href="/recrutamento">Recrutamento</a>
-				</li>
-				<li class="nav-item"><a class="nav-link" href="/downloads">Downloads</a>
-				</li>
+				<li class="nav-item"><a class="nav-link"
+					aria-current="page" href="/index">Início</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/recrutamento">Recrutamento</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/downloads">Downloads</a></li>
 			</ul>
 		</div>
 	</div>
@@ -39,5 +43,7 @@
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-		crossorigin="anonymous"></script>
+		crossorigin="anonymous">
+	</script>
+	<script src="/javascript.js"></script>
 </nav>
