--- a/src/main/resources/templates/page/recrutamento.html
+++ b/src/main/resources/templates/page/recrutamento.html
@@ -32,7 +32,7 @@
 						nascimento<br>
 					</label>
 					<div>
-						<input type="date" name="dataNascimento" id="dataNascimento">
+						<input type="date" name="dataNascimento" id="dataNascimento" required="required">
 					</div>
 				</div>
 				<div class="mb-3">
